// Vitest Snapshot v1

exports[`defineEventHandler > Should correctly handle variables. 1`] = `
{
  "__customProperty": "foobar",
  "data": {},
  "endpoint": "http//localhost/graphql",
  "options": {
    "body": {
      "query": "Query",
      "variables": {
        "variables": "{\\"variable\\":\\"one\\"}",
      },
    },
    "method": "POST",
  },
}
`;

exports[`defineEventHandler > Should handle a valid mutation 1`] = `
{
  "__customProperty": "foobar",
  "data": {},
  "endpoint": "http//localhost/graphql",
  "options": {
    "body": {
      "query": "Mutation",
      "variables": {},
    },
    "method": "POST",
  },
}
`;

exports[`defineEventHandler > Should handle a valid query 1`] = `
{
  "__customProperty": "foobar",
  "data": {},
  "endpoint": "http//localhost/graphql",
  "options": {
    "body": {
      "query": "Query",
      "variables": {
        "variables": "{}",
      },
    },
    "method": "POST",
  },
}
`;

exports[`defineEventHandler > Should handle an invalid operation 1`] = `[Error: Unknown operation.]`;

exports[`defineEventHandler > Should handle an invalid query 1`] = `[Error: Operation "query" with name "invalid" not found.]`;

exports[`defineEventHandler > Should handle unexpected errors. 1`] = `[Error: Couldn't execute GraphQL query.]`;
